--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -27,6 +27,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user != null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li class="dropdown" th:if="${session.user != null}"><a href="#" class="dropdown-toggle"
                                                                         data-toggle="dropdown" role="button"
                                                                         aria-expanded="false"><span
@@ -50,19 +53,23 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题 （简单扼要）：</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title"
+                           placeholder="问题标题...">
                 </div>
                 <div class="form-group">
                     <label for="title">问题补充 （必填，请参照右侧提示）：</label>
-                    <textarea class="form-control" name="description" id="description" cols="30" rows="10"></textarea>
+                    <textarea class="form-control" th:text="${description}" name="description" id="description"
+                              cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="title">添加标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以“，”隔开">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                           placeholder="输入标签，以“，”隔开">
                 </div>
+                <div class="alert alert-danger" role="alert" th:if="${error != null}" th:text="${error}"></div>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
             </form>
         </div>
