--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -69,8 +69,18 @@
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
                            placeholder="输入标签，以“，”隔开">
                 </div>
-                <div class="alert alert-danger" role="alert" th:if="${error != null}" th:text="${error}"></div>
-                <button type="submit" class="btn btn-success btn-publish">发布</button>
+                <div class="container-fluid main">
+                    <div class="row">
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                            <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" role="alert"
+                                 th:if="${error != null}"
+                                 th:text="${error}"></div>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-success btn-publish">发布</button>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
