--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="css/community.css"/>
     <script type="javascript" src="js/bootstrap.min.js"></script>
+    <script type="javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
