--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -12,12 +12,17 @@
     height: 40px;
 }
 
-.text-desc{
+.text-desc {
     font-size: 12px;
     font-weight: normal;
     color: #999;
 }
 
-.profile .section{
+.profile .section {
     margin-top: 15px;
+}
+
+.community-menu {
+    color: #999;
+    font-size: 13px;
 }
