--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,7 +34,7 @@
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
                         <a th:href="@{'/profile/'+${section}(page=1)}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;&lt;<</span>
+                            <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showPrevious}">
@@ -54,7 +54,7 @@
                     </li>
                     <li th:if="${pagination.showEndPage}">
                         <a th:href="@{'/profile/'+${section}(page=${pagination.totalPage})}" aria-label="Next">
-                            <span aria-hidden="true">&gt;&gt;</span>
+                            <span aria-hidden="true">&gt;&gt;&gt;</span>
                         </a>
                     </li>
                 </ul>
