--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -12,6 +12,10 @@
     height: 40px;
 }
 
+.media-body {
+    padding-top: 10px;
+}
+
 .text-desc {
     font-size: 12px;
     font-weight: normal;
@@ -25,4 +29,13 @@
 .community-menu {
     color: #999;
     font-size: 13px;
+}
+
+.comment{
+    margin: 10px 0;
+}
+
+.btn-comment{
+    float: right;
+    margin-bottom: 10px;
 }
