--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -29,13 +29,40 @@
 .community-menu {
     color: #999;
     font-size: 13px;
+    display: block;
+    margin-bottom: 15px;
 }
 
 .comment{
     margin: 10px 0;
 }
 
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
 .btn-comment{
     float: right;
     margin-bottom: 10px;
+}
+
+.comment-sp{
+    margin-top: 0;
+}
+
+.menu{
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .icon{
+    font-size: 15px;
+    margin-right: 6px;
+    cursor: pointer;
+}
+
+.menu .icon:hover{
+    color: #499ef3;
 }
